# NextPolish2

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
doc/: benchmark.md  benchmark1.md  benchmark2.md  benchmark3.md  benchmark4.md  benchmark5.md
other/: phasing.debug.py  remove_low_depth_in_fasta.py
src/: main.rs  utils.rs
src/utils/: kmer.rs  louvain.rs  option.rs  resource.rs  secondary.rs
test/: hh.sh
